Prevent global filters flicker on toggle /closes #65

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,8 +120,13 @@ h2 {
 #global-filters {
   position: sticky;
   top: 0;
+  min-height: 30px;
+}
+
+#global-filters.visible {
   z-index: 1;
 }
+
 
 .clearfix:after {
   visibility: hidden;
